fix: update font-family in CSS for consistency and improved readability

--- a/src/input.css
+++ b/src/input.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans', 'Noto Serif', 'Segoe UI', 'Roboto', 'Noto Color Emoji',
+  font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans', 'Noto Serif', 'Segoe UI', 'Roboto', 'Georgia', 'Noto Color Emoji',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
